Registration Proccess Complete

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <input name="password" type="password" class="form-control" placeholder="Password">
         </div>
         <button type="submit" class="btn btn-primary" id="btnLogin">Login</button>
-        <a href="./registrationUser.html">Sign Up</a>
+        <a href="./registration.html">Sign Up</a>
         <div id="errors">
 
         </div>
