--- a/pages/company.html
+++ b/pages/company.html
@@ -31,7 +31,7 @@
           <div class="sidebar-sticky">
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="./../home.html">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
                   Dashboard <span class="sr-only">(current)</span>
                 </a>
@@ -61,7 +61,7 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="/pages/">
+                <a class="nav-link active" href="/pages/company.html">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>
                   Companies
                 </a>
@@ -89,6 +89,9 @@
             </div>
           </div>
 
+          <div id="#errors">
+
+          </div>
 
           <div class="table-responsive">
             <table class="table table-striped table-sm">
@@ -118,6 +121,37 @@
     </div>
 
 
+    <div id="coModal" class="modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Company</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="">ID</label>
+              <input name="eCompanyID" class="form-control" readonly placeholder="ID">
+            </div>
+            <div class="form-group">
+              <label for="">Name</label>
+              <input name="eCompanyName" class="form-control" placeholder="Name">
+            </div>
+            <div class="form-group">
+              <label for="">Desc</label>
+              <input name="eCompanyDesc" class="form-control" placeholder="Description">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" id="btnSave">Save changes</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -136,7 +170,10 @@
         //build html data.
         htmlStr += "<tr>"
           htmlStr += "<td>"
-            htmlStr += json[i].company_id
+            htmlStr += "<a data-toggle='modal' onClick='loadData(this)' style='color:#007bff'>"
+            // htmlStr += "<a >"
+              htmlStr += json[i].company_id
+            htmlStr += "</a>"
           htmlStr += "</td>"
           htmlStr += "<td>"
             htmlStr += json[i].company_name
@@ -174,8 +211,59 @@
 
     $(document).ready(function () {
       filterResults();
+
+      //save for edits and inserts
+      $("#btnSave").click(function () {
+        
+        data = { 'isSave': true,
+                 'companyID': $("input[name=eCompanyID]").val(), 
+                 'companyName': $("input[name=eCompanyName]").val(), 
+                 'companyDesc': $("input[name=eCompanyDesc]").val()}
+        
+        $.post("./company.php", data, function (response) {
+          var success = true;
+          console.log(response);
+
+          var jsonResp = JSON.parse(response);
+          var eStr = "";
+
+          console.log(jsonResp);
+
+          for (var i = 0; i < Object.keys(jsonResp).length; i++) {
+            if (jsonResp[i].status == "FAIL") {
+              eStr += "<div class='text-danger' id='error'> Save Failed! " + jsonResp[i].message + "</div>";
+              success = false;
+            }; 
+          }
+
+          $("#errors").replaceWith(eStr);
+
+          if (success) {
+            alert('success');
+          }
+
+
+        });
+      });
     });     
 
+
+    function loadData(link){
+      data = { "loadCompanyID": $(link).text()}
+
+      console.log($(link).text());
+
+      $.post("./company.php", data, function (response) {
+        console.log(response);
+        var jsonResp = JSON.parse(response);
+        console.log(jsonResp);
+        $("input[name=eCompanyID]").val(jsonResp[0].company_id);
+        $("input[name=eCompanyName]").val(jsonResp[0].company_name);
+        $("input[name=eCompanyDesc]").val(jsonResp[0].company_desc);
+      });
+
+      $("#coModal").modal()
+    }
 
     </script>
 
