--- a/pages/assets.html
+++ b/pages/assets.html
@@ -475,6 +475,45 @@
         htmlStr += "</table>";
         htmlStr += "</div>";
 
+
+        // ============================================
+
+
+        htmlStr += "<!-- Collapsed Data -->";
+        htmlStr += "<h3>Locations</h3>";
+        htmlStr += "<div class='row align-items-center' style='margin-left: 0px;'>";
+        htmlStr += `<button type='button' class='btn btn-success mr-4' id='add${i}'  onClick='addLocation(this,"${json[i].asset_id}")'>Add</button>`;
+          htmlStr += `<textarea class="form-control" id="ta${i}" rows="3"></textarea>`
+        htmlStr += "</div>";
+
+
+        htmlStr += "<!-- Locations Table -->";
+        htmlStr += "<div class='table-responsive mt-5'>";
+        htmlStr += "<table class='table table-striped table-sm'>";
+        htmlStr += "<thead>";
+        htmlStr += "<tr>";
+        htmlStr += "<th>Action</th>";
+        htmlStr += "<th>Location Description</th>";
+        htmlStr += "</tr>";
+        htmlStr += "</thead>";
+        htmlStr += "<tbody id='grid-data'>";
+
+        if (typeof json[i].location != 'undefined') {
+          for (let k = 0; k < json[i].location.length; k++) {
+            htmlStr += "<tr>";
+            htmlStr += "<td>";
+            htmlStr += `<button type='button' class='btn btn-link' style='color:#dc3545;' onClick='removeLocation(this, '${json[i].location[k].location_id}')'>Remove</button>`;
+            htmlStr += "</td>";
+            htmlStr += "<td>" + json[i].location[k].location_desc + "</td>";
+            htmlStr += "</tr>";
+          }
+        }
+
+        htmlStr += "</tbody>";
+        htmlStr += "</table>";
+        htmlStr += "</div>";
+
+
         htmlStr += "</div>";
         htmlStr += "</td>";
         htmlStr += "</tr>";
@@ -734,6 +773,78 @@
       });
 
     }
+
+
+
+    function removeLocation(button, locationID) {
+      //Remove location from asset.
+
+      data = {
+        'isDeleteLocation': true,
+        'locationID': locationID,
+      }
+
+      $.post("./assets.php", data, function (response) {
+        var success = true;
+        console.log(response);
+
+        var jsonResp = JSON.parse(response);
+        var eStr = "";
+
+        console.log(jsonResp);
+
+        for (var i = 0; i < Object.keys(jsonResp).length; i++) {
+          if (jsonResp[i].status == "FAIL") {
+            eStr += " Delete Failed! " + jsonResp[i].message + "\n";
+            success = false;
+          };
+        }
+
+        if (success) {
+          filterResults();
+        }
+
+      });
+
+
+    }
+
+
+    function addLocation(button, assetID) {
+      var idx = button.id.slice(-1);
+
+      data = {
+        'isAddLocation': true,
+        'locationDesc': $("#ta"+idx).val(),
+        'assetID': assetID,
+      }
+
+      console.log(data);
+
+      $.post("./assets.php", data, function (response) {
+        var success = true;
+        console.log(response);
+
+        var jsonResp = JSON.parse(response);
+        var eStr = "";
+
+        console.log(jsonResp);
+
+        for (var i = 0; i < Object.keys(jsonResp).length; i++) {
+          if (jsonResp[i].status == "FAIL") {
+            eStr += " Add Location Failed! " + jsonResp[i].message + "\n";
+            success = false;
+          };
+        }
+
+        if (success) {
+          filterResults();
+        }
+
+      });
+
+    }
+
 
   </script>
 
