--- a/home.html
+++ b/home.html
@@ -68,10 +68,10 @@
                 <button class="btn btn-sm btn-outline-secondary">Share</button>
                 <button class="btn btn-sm btn-outline-secondary">Export</button>
               </div>
-              <button class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
-                This week
-              </button>
+              <select id="dashboard" class="btn btn-outline-secondary" onchange="buildChart()">
+                <option value="status">Asset Status Breakdown</option>
+                <option value="added">Added</option>
+              </select>              
             </div>
           </div>
 
@@ -79,15 +79,13 @@
 
           <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
             <h1 class="h2">Recent Activity</h1>
-            <div class="btn-toolbar mb-2 mb-md-0">
-              <div class="btn-group mr-2">
-                <select id="recentActivity" onchange="loadRecentActivity()">
+            <!-- <div class="btn-toolbar mb-2 mb-md-0"> -->
+                <select id="recentActivity" class="btn btn-outline-secondary" onchange="loadRecentActivity()">
                   <option value="yesterday">Yesterday</option>
                   <option value="lastWeek">Last Week</option>
                   <option value="lastMonth">Last Month</option>
                 </select>
-              </div>
-            </div>
+            <!-- </div> -->
           </div>
             
           <div class="table-responsive">
@@ -141,42 +139,69 @@
 
     $(document).ready(function () {
       loadRecentActivity();
+      buildChart();
     });
 
 
+    function buildChart(){
 
-
+      var select = $('#dashboard');
       var ctx = document.getElementById("myChart");
-      var myChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
-          datasets: [{
-            data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-            lineTension: 0,
-            backgroundColor: 'transparent',
-            borderColor: '#007bff',
-            borderWidth: 4,
-            pointBackgroundColor: '#007bff'
-          }]
-        },
-        options: {
-          scales: {
-            yAxes: [{
-              ticks: {
-                beginAtZero: false
+
+      data = { "isDashboard": true, 
+              "option": select.val(),
               }
-            }]
+
+      $.post("./home.php", data, function (response) {
+        console.log(response);
+        var jsonResp = JSON.parse(response);
+        console.log(jsonResp);
+
+
+        if (select.val() == "status") {
+          var myChart = new Chart(ctx, {
+          type: 'bar',
+          data: {
+            labels: ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sept","Oct","Nov","Dec"],
+            datasets: [{
+                        label: 'Active',
+                        data: jsonResp.active[0],
+                        backgroundColor: '#20c997' // green
+                      },
+                      {
+                        label: 'Disabled',
+                        data: jsonResp.disabled[0],
+                        backgroundColor: '#ffc107' // yellow
+                      },
+                      {
+                        label: 'Broken',
+                        data: jsonResp.broken[0],
+                        backgroundColor: '#dc3545' // red
+                      },
+                      {
+                        label: 'Other',
+                        data: jsonResp.other[0],
+                        backgroundColor: '#6c757d' // grey
+                      }]
+
           },
-          legend: {
-            display: false,
+          options: {
+            scales: {
+              xAxes: [{
+                stacked: true
+              }],
+              yAxes: [{
+                stacked: true
+              }],
+            },
           }
+        });
         }
-      });
-    
+      }); //post
 
 
 
+    }
 
 
       function buildTable(json) {
@@ -222,7 +247,7 @@
         htmlStr += "</tbody>";
 
         $("#grid-data").replaceWith(htmlStr);
-        console.log(htmlStr);
+        // console.log(htmlStr);
       }
 
 
@@ -234,7 +259,7 @@
                 }
 
         $.post("./home.php", data, function (response) {
-          console.log(response);
+          // console.log(response);
           var jsonResp = JSON.parse(response);
           buildTable(jsonResp);
         });
