--- a/home.html
+++ b/home.html
@@ -136,6 +136,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.13/dist/js/bootstrap-select.min.js"></script>
 
     <script>
+    var myChart;
+
 
     $(document).ready(function () {
       loadRecentActivity();
@@ -151,7 +153,6 @@
       data = { "isDashboard": true, 
               "option": select.val(),
               }
-
       $.post("./home.php", data, function (response) {
 
 
@@ -159,9 +160,13 @@
         var jsonResp = JSON.parse(response);
         console.log(jsonResp);
 
+        if (myChart){
+          myChart.destroy();
+        }
+
 
         if (select.val() == "status") {
-                var myChart = new Chart(ctx, {
+                myChart = new Chart(ctx, {
                 type: 'bar',
                 data: {
                   labels: ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sept","Oct","Nov","Dec"],
@@ -201,36 +206,45 @@
 
         } else if (select.val() == "added") {
 
-              var myChart = new Chart(ctx, {
+              myChart = new Chart(ctx, {
                 type: 'line',
                 data: {
                   labels: ["Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sept","Oct","Nov","Dec"],
                   datasets: [{
-                              label: 'Active',
-                              data: jsonResp.active[0],
-                              backgroundColor: '#20c997' // green
+                              label: 'Hardware',
+                              data: jsonResp.hardware[0],
+                              lineTension: 0,
+                              backgroundColor: '#ffc10769',
+                              borderColor: '#ffc107',
+                              borderWidth: 4,
+                              pointBackgroundColor: '#ffc107'
                             },
                             {
-                              label: 'Disabled',
-                              data: jsonResp.disabled[0],
-                              backgroundColor: '#ffc107' // yellow
-                            },
-                            {
-                              label: 'Broken',
-                              data: jsonResp.broken[0],
-                              backgroundColor: '#dc3545' // red
-                            },
-                            {
-                              label: 'Other',
-                              data: jsonResp.other[0],
-                              backgroundColor: '#6c757d' // grey
+                              label: 'Software',
+                              data: jsonResp.software[0],
+                              lineTension: 0,
+                              backgroundColor: '#0088ff82',
+                              borderColor: '#007bff',
+                              borderWidth: 4,
+                              pointBackgroundColor: '#007bff'
                             }]
 
                 },
                 options: {
-                  
+                  scales: {
+                    yAxes: [{
+                      ticks: {
+                        beginAtZero: false
+                      }
+                    }]
+                  },
+                  legend: {
+                    display: false,
+                  }
                 }
               });
+
+
 
 
         }//if
