--- a/pages/company.html
+++ b/pages/company.html
@@ -599,7 +599,7 @@
         }
       
         if (success) {
-          alert("filter");
+          // alert("filter");
           filterResults();
         }
 
