--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
             <h1 class="h2">Recent Activity</h1>
             <!-- <div class="btn-toolbar mb-2 mb-md-0"> -->
                 <select id="recentActivity" class="btn btn-outline-secondary" onchange="loadRecentActivity()">
-                  <option value="yesterday">Yesterday</option>
+                  <option value="yesterday">Last 24hrs</option>
                   <option value="lastWeek">Last Week</option>
                   <option value="lastMonth">Last Month</option>
                 </select>
